before solving N+1