@@ -1,7 +1,9 @@
 package com.sprint.mission.discodeit.service.basic;
 
+import com.sprint.mission.discodeit.dto.data.UserStatusDto;
 import com.sprint.mission.discodeit.dto.request.UserStatusCreateRequest;
 import com.sprint.mission.discodeit.dto.request.UserStatusUpdateRequest;
+import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.entity.UserStatus;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
@@ -13,6 +15,8 @@ import java.time.Instant;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.UUID;
+import java.util.stream.Collectors;
+import org.springframework.transaction.annotation.Transactional;
 
 @RequiredArgsConstructor
 @Service
@@ -22,63 +26,90 @@ public class BasicUserStatusService implements UserStatusService {
   private final UserRepository userRepository;
 
   @Override
-  public UserStatus create(UserStatusCreateRequest request) {
+  @Transactional
+  public UserStatusDto create(UserStatusCreateRequest request) {
     UUID userId = request.userId();
 
-    if (!userRepository.existsById(userId)) {
-      throw new NoSuchElementException("User with id " + userId + " does not exist");
-    }
-    if (userStatusRepository.findByUserId(userId).isPresent()) {
-      throw new IllegalArgumentException("UserStatus with id " + userId + " already exists");
+    // User 엔티티가 존재하는지 확인
+    User user = userRepository.findById(userId)
+        .orElseThrow(
+            () -> new NoSuchElementException("User with id " + userId + " does not exist"));
+
+    // 이미 UserStatus가 존재하는지 중복 체크
+    if (userStatusRepository.findByUser_Id(userId).isPresent()) {
+      throw new IllegalArgumentException("UserStatus for userId " + userId + " already exists");
     }
 
     Instant lastActiveAt = request.lastActiveAt();
-    UserStatus userStatus = new UserStatus(userId, lastActiveAt);
-    return userStatusRepository.save(userStatus);
+    // User 객체를 이용해 UserStatus 생성
+    UserStatus userStatus = new UserStatus(user, lastActiveAt);
+
+    UserStatus savedUserStatus = userStatusRepository.save(userStatus);
+    return toDto(savedUserStatus);
   }
 
   @Override
-  public UserStatus find(UUID userStatusId) {
-    return userStatusRepository.findById(userStatusId)
+  @Transactional
+  public UserStatusDto find(UUID userStatusId) {
+    UserStatus userStatus = userStatusRepository.findById(userStatusId)
         .orElseThrow(
             () -> new NoSuchElementException("UserStatus with id " + userStatusId + " not found"));
+    return toDto(userStatus);
   }
 
   @Override
-  public List<UserStatus> findAll() {
-    return userStatusRepository.findAll().stream()
-        .toList();
+  @Transactional
+  public List<UserStatusDto> findAll() {
+    return userStatusRepository.findAll()
+        .stream()
+        .map(this::toDto)
+        .collect(Collectors.toList());
   }
 
   @Override
-  public UserStatus update(UUID userStatusId, UserStatusUpdateRequest request) {
+  @Transactional
+  public UserStatusDto update(UUID userStatusId, UserStatusUpdateRequest request) {
     Instant newLastActiveAt = request.newLastActiveAt();
 
     UserStatus userStatus = userStatusRepository.findById(userStatusId)
         .orElseThrow(
             () -> new NoSuchElementException("UserStatus with id " + userStatusId + " not found"));
-    userStatus.update(newLastActiveAt);
 
-    return userStatusRepository.save(userStatus);
+    userStatus.update(newLastActiveAt);
+    UserStatus updatedUserStatus = userStatusRepository.save(userStatus);
+    return toDto(updatedUserStatus);
   }
 
   @Override
-  public UserStatus updateByUserId(UUID userId, UserStatusUpdateRequest request) {
+  @Transactional
+  public UserStatusDto updateByUserId(UUID userId, UserStatusUpdateRequest request) {
     Instant newLastActiveAt = request.newLastActiveAt();
 
-    UserStatus userStatus = userStatusRepository.findByUserId(userId)
+    // userId 기준으로 UserStatus 조회
+    UserStatus userStatus = userStatusRepository.findByUser_Id(userId)
         .orElseThrow(
             () -> new NoSuchElementException("UserStatus with userId " + userId + " not found"));
-    userStatus.update(newLastActiveAt);
 
-    return userStatusRepository.save(userStatus);
+    userStatus.update(newLastActiveAt);
+    UserStatus updatedUserStatus = userStatusRepository.save(userStatus);
+    return toDto(updatedUserStatus);
   }
 
   @Override
+  @Transactional
   public void delete(UUID userStatusId) {
     if (!userStatusRepository.existsById(userStatusId)) {
       throw new NoSuchElementException("UserStatus with id " + userStatusId + " not found");
     }
     userStatusRepository.deleteById(userStatusId);
+  }
+
+  // UserStatus를 UserStatusDto로 변환하는 메서드
+  private UserStatusDto toDto(UserStatus userStatus) {
+    return new UserStatusDto(
+        userStatus.getId(),
+        userStatus.getUser().getId(),
+        userStatus.getLastActiveAt()
+    );
   }
 }
